tests/Parse/test_1_r06.out
Error type A at Line 4: unknown lexeme 3_wrong_id
