tests/Parse/test_1_r06.spl
int test_1_r06()
{
    int right_id_1, _right_id_2;
    float 3_wrong_id;
}
